# SyncClipboard

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: client.py  clip_object.py  clip_user.py  clipboard_observer.py  clipboard_platform.py  db_management.py  main_client.py  webapp.py  websocket_client.py
src/templates/: index.html
src/tests/: client_test.py  clip_object_test.py  clip_user_test.py  db_management_test.py  webapp_test.py
